--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "dw-portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A virtual CV showcasing my work",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Daniel Windsor - daniel.windsor@protonmail.com",
   "dependencies": {
-    "@ion-phaser/core": "^1.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
-    "framer-motion": "^4.1.11",
+    "firebase": "^8.5.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
     "gatsby-plugin-image": "^1.4.0",
